// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom text color and background color 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1.25;
  text-transform: uppercase;
  color: #C27E00;
  background-color: #FEF5D9;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgba(0, 3, 6, 0.12);
}

<span
  className="glamor-0"
>
  Test
</span>
`;

exports[`renders without crashing 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1.25;
  text-transform: uppercase;
  color: #FFFFFF;
  background-color: #0071CE;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgba(0, 3, 6, 0.12);
}

<span
  className="glamor-0"
>
  Test
</span>
`;
